Mon Mar 24 12:21:38 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* t_ser.c: Clean up error reporting for krb5_init_context().  Also
 		report errors for each subtest, so we know which subtest
 		failed.

Sat Feb 22 22:39:49 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Use some of the new library list build rules in
		win-post.in

Fri Feb 21 18:38:06 1997  Sam Hartman  <hartmans@tertius.mit.edu>

	* crypto_glue.c: Move into libcrypto as krb5_glue.c; I need to
        avoid libcrypto depending on libkrb5

Wed Feb 19 14:21:12 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* t_kerb.c (test_set_realm): New function used to test
	krb5_set_principal_realm().  Called by using the new "set_realm"
	command to t_kerb.

	* set_realm.c (krb5_set_principal_realm): New function which sets
		the realm of a principal.

Thu Feb 13 14:17:00 1997  Richard Basch  <basch@lehman.com>

	* get_in_tkt.c (krb5_get_in_tkt): Initialize as_reply; if
		krb5_os_localaddr() returns an error, the cleanup
		routine may try to free a garbage pointer (as_reply).

Wed Feb 12 20:47:30 1997  Tom Yu  <tlyu@mit.edu>

	* fwd_tgt.c (krb5_fwd_tgt_creds): Use the client's realm rather
		than the server's realm for constructing the tgs principal.
		Remove TC_MATCH_SRV_NAMEONLY from call to retrieve_cred()
		because we want to get an exact match.

Mon Feb 10 10:41:36 1997  Ezra Peisach  <epeisach@mit.edu>

	* crypto_glue.c (krb5_calculate_checksum): Add krb5_const to
	        krb5_pointer of in data to match prototype.

Sat Feb  8 15:02:39 1997  Richard Basch  <basch@lehman.com>

	* get_creds.c:
		Export krb5_get_credentials_{renew,validate} (win32)
		Removed unused variable.

Fri Feb  7 09:41:33 1997  Richard Basch  <basch@lehman.com>

	* mk_cred.c (krb5_mk_ncred): Declare ncred as krb5_int32 so that
		the right value is pushed onto the stack when calling
		krb5_mk_ncred_basic()

	* copy_addrs.c fwd_tgt.c mk_cred.c:
		Use FAR keyword in pointer declarations.
